--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body{
     background-color: white;
     position: sticky;
     top: 0;
+    z-index:100;
 }
 .flipkart-img{
     padding-top: 15px;
